// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept the style prop 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 > * {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1 > :first-child {
  margin-top: 0;
}

.emotion-1 > :last-child {
  margin-bottom: 0;
}

.emotion-1 > *:empty {
  display: none;
}

.emotion-0 {
  color: pink;
}

<div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 > * {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-1 > :first-child {
  margin-top: 0;
}

.emotion-1 > :last-child {
  margin-bottom: 0;
}

.emotion-1 > *:empty {
  display: none;
}

<div>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`should render correctly 2`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-4 > * {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-4 > :first-child {
  margin-top: 0;
}

.emotion-4 > :last-child {
  margin-bottom: 0;
}

.emotion-4 > *:empty {
  display: none;
}

.emotion-0 {
  color: #D01E29;
  margin-left: 0.25rem;
}

.emotion-1 {
  font-weight: bold;
  display: block;
  margin-bottom: 0.25rem;
  line-height: 20px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #D01E29;
  margin-top: 0.25rem;
  line-height: 20px;
}

<div>
  <div
    class="emotion-4"
  >
    <div
      class="emotion-2"
    >
      <label
        class="emotion-1"
        for="test"
      >
        Label
        <span
          class="emotion-0"
          title="Required field"
        >
          *
        </span>
      </label>
      Test
    </div>
    <div
      class="emotion-3"
      role="alert"
    >
      Error
    </div>
  </div>
</div>
`;
